@@ -64,9 +64,11 @@ import java.util.concurrent.ConcurrentLinkedQueue;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.Semaphore;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.concurrent.locks.Lock;
+import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Supplier;
 
 /**
@@ -116,6 +118,12 @@ public class SegmentLocalCacheManager implements SegmentCacheManager
   private final IndexIO indexIO;
 
   private final ListeningExecutorService virtualStorageLoadOnDemandExec;
+  /**
+   * Bounds the number of in-flight on-demand loads when running with virtual threads. Null when virtual storage is
+   * disabled or when the legacy fixed-pool path is selected (the pool size is the implicit limit there).
+   */
+  @Nullable
+  private final Semaphore virtualStorageLoadOnDemandPermits;
   private ExecutorService loadOnBootstrapExec = null;
   private ExecutorService loadOnDownloadExec = null;
 
@@ -137,10 +145,6 @@ public class SegmentLocalCacheManager implements SegmentCacheManager
     log.info("Using storage location strategy[%s].", this.strategy.getClass().getSimpleName());
 
     if (config.isVirtualStorage()) {
-      log.info(
-          "Using virtual storage mode - on demand load threads: [%d].",
-          config.getVirtualStorageLoadThreads()
-      );
       if (config.getNumThreadsToLoadSegmentsIntoPageCacheOnDownload() > 0) {
         throw DruidException.defensive("Invalid configuration: virtualStorage is incompatible with numThreadsToLoadSegmentsIntoPageCacheOnDownload");
       }
@@ -152,14 +156,32 @@ public class SegmentLocalCacheManager implements SegmentCacheManager
           location.setAreWeakEntriesEphemeral(true);
         }
       }
-      virtualStorageLoadOnDemandExec =
-          MoreExecutors.listeningDecorator(
-              // probably replace this with virtual threads once minimum version is java 21
-              Executors.newFixedThreadPool(
-                  config.getVirtualStorageLoadThreads(),
-                  Execs.makeThreadFactory("VirtualStorageOnDemandLoadingThread-%s")
-              )
-          );
+      if (config.isVirtualStorageUseVirtualThreads()) {
+        log.info(
+            "Using virtual storage mode with virtual threads - max concurrent on demand loads: [%d].",
+            config.getVirtualStorageLoadThreads()
+        );
+        virtualStorageLoadOnDemandPermits = new Semaphore(config.getVirtualStorageLoadThreads());
+        virtualStorageLoadOnDemandExec = MoreExecutors.listeningDecorator(
+            Executors.newThreadPerTaskExecutor(
+                Thread.ofVirtual()
+                      .name("VirtualStorageOnDemandLoadingThread-", 0)
+                      .factory()
+            )
+        );
+      } else {
+        log.info(
+            "Using virtual storage mode with fixed platform thread pool - on demand load threads: [%d].",
+            config.getVirtualStorageLoadThreads()
+        );
+        virtualStorageLoadOnDemandPermits = null;
+        virtualStorageLoadOnDemandExec = MoreExecutors.listeningDecorator(
+            Executors.newFixedThreadPool(
+                config.getVirtualStorageLoadThreads(),
+                Execs.makeThreadFactory("VirtualStorageOnDemandLoadingThread-%s")
+            )
+        );
+      }
     } else {
       log.info(
           "Number of threads to load segments into page cache - on bootstrap: [%d], on download: [%d].",
@@ -181,6 +203,7 @@ public class SegmentLocalCacheManager implements SegmentCacheManager
         );
       }
       virtualStorageLoadOnDemandExec = null;
+      virtualStorageLoadOnDemandPermits = null;
     }
   }
 
@@ -786,15 +809,27 @@ public class SegmentLocalCacheManager implements SegmentCacheManager
           final long startTime = System.nanoTime();
           return virtualStorageLoadOnDemandExec.submit(
               () -> {
-                final long execStartTime = System.nanoTime();
-                final long waitTime = execStartTime - startTime;
-                entry.mount(location);
-                return new AcquireSegmentResult(
-                    entry.referenceProvider,
-                    entry.dataSegment.getSize(),
-                    waitTime,
-                    System.nanoTime() - execStartTime
-                );
+                // Acquire a permit inside the task so that waiting parks the (virtual) thread instead of blocking the
+                // submitter. In fixed-pool mode permits is null and the pool size itself bounds concurrency.
+                if (virtualStorageLoadOnDemandPermits != null) {
+                  virtualStorageLoadOnDemandPermits.acquireUninterruptibly();
+                }
+                try {
+                  final long execStartTime = System.nanoTime();
+                  final long waitTime = execStartTime - startTime;
+                  entry.mount(location);
+                  return new AcquireSegmentResult(
+                      entry.referenceProvider,
+                      entry.dataSegment.getSize(),
+                      waitTime,
+                      System.nanoTime() - execStartTime
+                  );
+                }
+                finally {
+                  if (virtualStorageLoadOnDemandPermits != null) {
+                    virtualStorageLoadOnDemandPermits.release();
+                  }
+                }
               }
           );
         }
@@ -982,6 +1017,7 @@ public class SegmentLocalCacheManager implements SegmentCacheManager
     private File storageDir;
     private ReferenceCountedSegmentProvider referenceProvider;
     private final AtomicReference<Runnable> onUnmount = new AtomicReference<>();
+    private final ReentrantLock entryLock = new ReentrantLock();
 
     private SegmentCacheEntry(final DataSegment dataSegment)
     {
@@ -1003,9 +1039,15 @@ public class SegmentLocalCacheManager implements SegmentCacheManager
     }
 
     @Override
-    public synchronized boolean isMounted()
+    public boolean isMounted()
     {
-      return referenceProvider != null;
+      entryLock.lock();
+      try {
+        return referenceProvider != null;
+      }
+      finally {
+        entryLock.unlock();
+      }
     }
 
     @Override
@@ -1024,7 +1066,8 @@ public class SegmentLocalCacheManager implements SegmentCacheManager
       }
 
       try {
-        synchronized (this) {
+        entryLock.lock();
+        try {
           if (location != null) {
             log.debug(
                 "already mounted [%s] in location[%s], but asked to load in [%s], unmounting old location",
@@ -1070,7 +1113,9 @@ public class SegmentLocalCacheManager implements SegmentCacheManager
           lazyLoadCallback = SegmentLazyLoadFailCallback.NOOP;
           referenceProvider = ReferenceCountedSegmentProvider.of(segment);
         }
-
+        finally {
+          entryLock.unlock();
+        }
 
         // since we do not hold a lock on the location while mounting, make sure that we actually are reserved and
         // should have mounted, otherwise unmount so we don't leave any orphaned files
@@ -1114,16 +1159,21 @@ public class SegmentLocalCacheManager implements SegmentCacheManager
     @Override
     public void unmount()
     {
-      final Lock lock;
-      synchronized (this) {
+      final Lock locationLock;
+      entryLock.lock();
+      try {
         if (location == null) {
           return;
         }
-        lock = location.getLock().readLock();
+        locationLock = location.getLock().readLock();
       }
-      lock.lock();
+      finally {
+        entryLock.unlock();
+      }
+      locationLock.lock();
       try {
-        synchronized (this) {
+        entryLock.lock();
+        try {
           if (referenceProvider != null) {
             ReferenceCountedSegmentProvider provider = referenceProvider;
             referenceProvider = null;
@@ -1145,32 +1195,53 @@ public class SegmentLocalCacheManager implements SegmentCacheManager
             onUnmountRunnable.run();
           }
         }
+        finally {
+          entryLock.unlock();
+        }
       }
       finally {
-        lock.unlock();
+        locationLock.unlock();
       }
     }
 
-    public synchronized Optional<Segment> acquireReference()
+    public Optional<Segment> acquireReference()
     {
-      if (referenceProvider == null) {
-        return Optional.empty();
+      entryLock.lock();
+      try {
+        if (referenceProvider == null) {
+          return Optional.empty();
+        }
+        return referenceProvider.acquireReference();
       }
-      return referenceProvider.acquireReference();
+      finally {
+        entryLock.unlock();
+      }
     }
 
-    public synchronized boolean setDeleteInfoFileOnUnmount()
+    public boolean setDeleteInfoFileOnUnmount()
     {
-      if (location == null) {
-        return false;
+      entryLock.lock();
+      try {
+        if (location == null) {
+          return false;
+        }
+        onUnmount.set(() -> deleteSegmentInfoFile(dataSegment));
+        return true;
       }
-      onUnmount.set(() -> deleteSegmentInfoFile(dataSegment));
-      return true;
+      finally {
+        entryLock.unlock();
+      }
     }
 
-    public synchronized void clearOnUnmount()
+    public void clearOnUnmount()
     {
-      onUnmount.set(null);
+      entryLock.lock();
+      try {
+        onUnmount.set(null);
+      }
+      finally {
+        entryLock.unlock();
+      }
     }
 
     public void loadIntoPageCache()
@@ -1178,7 +1249,8 @@ public class SegmentLocalCacheManager implements SegmentCacheManager
       if (!isMounted()) {
         return;
       }
-      synchronized (this) {
+      entryLock.lock();
+      try {
         final File[] children = storageDir.listFiles();
         if (children != null) {
           for (File child : children) {
@@ -1192,6 +1264,9 @@ public class SegmentLocalCacheManager implements SegmentCacheManager
           }
         }
       }
+      finally {
+        entryLock.unlock();
+      }
     }
 
     public boolean checkExists(final File location)
@@ -1204,7 +1279,7 @@ public class SegmentLocalCacheManager implements SegmentCacheManager
       return new File(location, relativePathString);
     }
 
-    @GuardedBy("this")
+    @GuardedBy("entryLock")
     private void loadInLocationWithStartMarker(final DataSegment segment, final File storageDir)
         throws SegmentLoadingException
     {
@@ -1228,7 +1303,7 @@ public class SegmentLocalCacheManager implements SegmentCacheManager
       }
     }
 
-    @GuardedBy("this")
+    @GuardedBy("entryLock")
     private void loadInLocation(final DataSegment segment, final File storageDir)
         throws SegmentLoadingException
     {
@@ -1246,7 +1321,7 @@ public class SegmentLocalCacheManager implements SegmentCacheManager
       }
     }
 
-    @GuardedBy("this")
+    @GuardedBy("entryLock")
     private SegmentizerFactory getSegmentFactory(final File segmentFiles) throws SegmentLoadingException
     {
       final File factoryJson = new File(segmentFiles, "factory.json");
